<!-- FILE: app/src/main/res/navigation/nav_graph.xml -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.eduquiz.pro.ui.home.HomeFragment"
        android:label="@string/home">
        <action
            android:id="@+id/action_home_to_difficulty"
            app:destination="@id/difficultySelectionFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/quizLandingFragment"
        android:name="com.eduquiz.pro.ui.quiz.DifficultySelectionFragment"
        android:label="@string/quiz">
        <argument android:name="courseId" app:argType="integer" android:defaultValue="1"/>
        <argument android:name="courseTitle" app:argType="string" android:defaultValue="General Science"/>
        <argument android:name="courseIcon" app:argType="string" android:defaultValue="🔬"/>
        <action android:id="@+id/action_difficulty_to_quiz" app:destination="@id/quizFragment"/>
    </fragment>

    <fragment
        android:id="@+id/difficultySelectionFragment"
        android:name="com.eduquiz.pro.ui.quiz.DifficultySelectionFragment"
        android:label="@string/select_difficulty">
        <argument android:name="courseId" app:argType="integer"/>
        <argument android:name="courseTitle" app:argType="string"/>
        <argument android:name="courseIcon" app:argType="string"/>
        <action android:id="@+id/action_difficulty_to_quiz" app:destination="@id/quizFragment"/>
    </fragment>

    <fragment
        android:id="@+id/quizFragment"
        android:name="com.eduquiz.pro.ui.quiz.QuizFragment"
        android:label="@string/quiz">
        <argument android:name="courseId" app:argType="integer"/>
        <argument android:name="courseTitle" app:argType="string"/>
        <argument android:name="difficulty" app:argType="string"/>
        <action android:id="@+id/action_quiz_to_result" app:destination="@id/resultFragment"/>
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.eduquiz.pro.ui.results.ResultFragment"
        android:label="@string/results">
        <argument android:name="score" app:argType="integer"/>
        <argument android:name="total" app:argType="integer"/>
        <argument android:name="correct" app:argType="integer"/>
        <argument android:name="wrong" app:argType="integer"/>
        <argument android:name="timeout" app:argType="integer"/>
        <argument android:name="courseId" app:argType="integer"/>
        <argument android:name="courseTitle" app:argType="string"/>
        <argument android:name="difficulty" app:argType="string"/>
        <argument android:name="reviews" app:argType="string[]"/>
        <action android:id="@+id/action_result_to_home" app:destination="@id/homeFragment"/>
        <action android:id="@+id/action_result_to_quiz" app:destination="@id/quizFragment"/>
    </fragment>

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.eduquiz.pro.ui.progress.ProgressFragment"
        android:label="@string/progress" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.eduquiz.pro.ui.profile.ProfileFragment"
        android:label="@string/profile" />

</navigation>
